welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:29: error: not found: value faireV9
	faireV9()
        ^